Closed Bug 566603 Opened 15 years ago Closed 15 years ago

random "###!!! ASSERTION: couldn't get canvas size: 'Not Reached'" in lots of canvas tests

Categories

(Core :: Graphics: Canvas2D, defect, P2)

defect

Tracking

()

RESOLVED FIXED
mozilla1.9.3a5

People

(Reporter: dbaron, Assigned: dbaron)

References

Details

(Keywords: assertion)

Attachments

(1 file)

Attached patch patchSplinter Review
http://hg.mozilla.org/mozilla-central/rev/e11ef37d8108 caused a major regression in reftest assertion counts last night: lots of tests are asserting that weren't before. (This is something I'm planning to make turn the tree orange once new try lands, hopefully later this week.) The fix looks trivial: it's the result of an uninitialized rv. Here's the obvious patch, untested (but will be tested soon).
Attachment #445961 - Flags: review?(vladimir)
Blocks: 561168
Comment on attachment 445961 [details] [diff] [review] patch doh! sorry, that looks good
Attachment #445961 - Flags: review?(vladimir) → review+
Status: ASSIGNED → RESOLVED
Closed: 15 years ago
Resolution: --- → FIXED
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: