Fix spew of 'couldn't get canvas size' assertions.  (Bug 566603)  r=vlad